packages/ui/src/styles/components/hoveringToolbar.sass
@import '../common'

.#{$cui-conf-globalPrefix}hoveringToolbar
	bottom: 0
	opacity: 0
	overflow: visible
	pointer-events: none
	position: sticky
	top: 0
	transition-duration: var(--cui-transition-duration--fast)
	transition-property: opacity, visibility
	visibility: hidden
	z-index: 2

	&:not(.view-contextual) &-content
		bottom: 0
		display: flex
		justify-content: center
		left: var(--cui-editor-canvas-element-padding-left)
		margin: var(--cui-editor-canvas-element-padding-top) auto var(--cui-editor-canvas-element-padding-bottom) auto
		overflow-x: auto
		position: absolute
		right: var(--cui-editor-canvas-element-padding-right)
		top: auto

	:not(.is-not-in-view) > &.is-active
		opacity: 1
		visibility: visible
	:not(.is-not-in-view) > &.is-active &-content
			pointer-events: all

	&.view-contextual
		bottom: unset
		left: -1000vw
		margin: -.5em 0 0 0
		position: absolute
		right: unset
		top: -1000vh
		top: unset

